--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20"
+    "knex": "^2.3.0",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0"
   },
   "scripts": {
-    "start": "nodemon ./index.js localhost 8080"
+    "start": "nodemon index",
+    "migrate": "knex migrate:latest",
+    "unmigrate": "knex migrate:rollback",
+    "seed": "knex seed:run "
   }
 }
