--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "gym-back",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "docker": "^1.0.0",
+    "dotenv": "^16.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
