--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "dotenv-safe": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.3.0",
@@ -17,7 +18,7 @@
     "pg": "^8.8.0"
   },
   "scripts": {
-    "start": "nodemon index",
+    "start": "env-cmd -f ./environments/.env.development nodemon index",
     "migrate": "knex migrate:latest",
     "unmigrate": "knex migrate:rollback",
     "seed": "knex seed:run "
